--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -30,101 +30,134 @@
       </header>
       <!-- header -->
       <main>
-         <div class="hero">
-            <div class="hero__wrapper">
-               <div class="hero__wrapper">
-                  <div class="hero__title">Праздник в каждый дом</div>
-               </div>
-            </div>
-         </div>
-         <div class="service">
-            <div class="service__wrapper">
-               <div class="service__title">Чтобы воспользоваться услугами компании необходимо: </div>
-               <div class="service__steps">
-                  <ul>
-                     <li> <span>1</span> Выбрать даты праздника; </li>
-                     <li> <span>2</span> Выбрать количество участников; </li>
-                     <li> <span>3</span> Выбрать желаемую локацию для праздника, соответствующую условиям выше; </li>
-                     <li> <span>4</span> Зарезервировать конкретную зону на территории выбранной локации; </li>
-                     <li> <span>5</span> Определить перечень дополнительных услуг;</li>
-                     <li> <span>6</span> Оформить заказ. </li>
-                  </ul>
-               </div>
-            </div>
-         </div>
-         <!-- locations -->
-         <div class="locations">
-            <div class="locations__wrapper">
-               <div class="locations__title">Акции</div>
-               <div class="locations__cards">
-                  <div class="locations__card">
-                     <figure class="locations__image">
-                        <img src="./assets/images/promotions/promotion2.jpg" alt="a1">
-                        <figcaption>Скидка до 60%. <br> За заказ зоны (от 25 человек) <br> в локации «Черная жемчужина»
-                        </figcaption>
-                     </figure>
+          <div class="hero">
+              <div class="hero__wrapper">
+                  <div class="hero__wrapper">
+                      <div class="hero__title">Праздник в каждый дом</div>
                   </div>
-                  <div class="locations__card">
-                     <figure class="locations__image">
-                        <img src="./assets/images/promotions/promotion1.jpg" alt="a2">
-                        <figcaption>Заказ от 25 до 30 человек: <br> Скидка 40% на аренду при <br> заказе в будний день
-                        </figcaption>
-                     </figure>
+              </div>
+          </div>
+          <div class="service">
+              <div class="service__wrapper">
+                  <div class="service__title">Чтобы воспользоваться услугами компании необходимо: </div>
+                  <div class="service__steps">
+                      <ul>
+                          <li> <span>1</span> Выбрать даты праздника; </li>
+                          <li> <span>2</span> Выбрать количество участников; </li>
+                          <li> <span>3</span> Выбрать желаемую локацию для праздника, соответствующую условиям выше; </li>
+                          <li> <span>4</span> Зарезервировать конкретную зону на территории выбранной локации; </li>
+                          <li> <span>5</span> Определить перечень дополнительных услуг;</li>
+                          <li> <span>6</span> Оформить заказ. </li>
+                      </ul>
+                  </div>
+              </div>
+          </div>
+          <!-- locations -->
+          <div class="locations">
+              <div class="locations__wrapper">
+                  <div class="locations__title">Акции</div>
+                  <div class="locations__cards">
+                      <div class="locations__card">
+                          <figure class="locations__image">
+                              <img src="./assets/images/promotions/promotion2.jpg" alt="a1">
+                              <figcaption>
+                                  Скидка до 60%. <br> За заказ зоны (от 25 человек) <br> в локации «Черная жемчужина»
+                              </figcaption>
+                          </figure>
+                      </div>
+                      <div class="locations__card">
+                          <figure class="locations__image">
+                              <img src="./assets/images/promotions/promotion1.jpg" alt="a2">
+                              <figcaption>
+                                  Заказ от 25 до 30 человек: <br> Скидка 40% на аренду при <br> заказе в будний день
+                              </figcaption>
+                          </figure>
 
-                  </div>
-                  <div class="locations__card">
-                     <figure class="locations__image">
-                        <img src="./assets/images/promotions/promotion3.jpg" alt="a3">
-                        <figcaption>Скидка до 51% при заказе услуг аниматоров. <br> Уютное место для организации <br>
-                           праздников «Поляна сказок»</figcaption>
-                     </figure>
+                      </div>
+                      <div class="locations__card">
+                          <figure class="locations__image">
+                              <img src="./assets/images/promotions/promotion3.jpg" alt="a3">
+                              <figcaption>
+                                  Скидка до 51% при заказе услуг аниматоров. <br> Уютное место для организации <br>
+                                  праздников «Поляна сказок»
+                              </figcaption>
+                          </figure>
 
+                      </div>
                   </div>
-               </div>
 
-            </div>
-         </div>
-         <!-- locations -->
+              </div>
+          </div>
+          <!-- locations -->
+          <!-- sale sub -->
+          <div class="sale__sub">
+              <div class="sale__sub__wrapper">
+                  <div class="sale__sub__title title">Подписаться на акции</div>
+                  <form class="sale__form">
+                      <input type="email" placeholder="Почта" />
+                      <button type="submit">Подписаться</button>
+                  </form>
+              </div>
+          </div>
 
-         <!-- reports -->
-         <div class="reports">
-            <div class="reports__wrapper">
-               <div class="reports__title">Отзывы</div>
-               <div class="reports__cards">
-                  <div class="report__card">
-                     <div class="report__avatar">
-                        <img src="./assets/images/people/3.jpg" alt="r1">
-                     </div>
-                     <div class="report__content">
-                        Спасибо большое! Дети в бурных эмоция, аниматор супер, даже взрослые участвовали, как это было
-                        все классно, энергично,
-                        здорово!
-                        Успехов вам больших!
-                     </div>
+          <!-- sale sub -->
+          <!-- reports -->
+          <div class="reports">
+              <div class="reports__wrapper">
+                  <div class="reports__title">Отзывы</div>
+                  <div class="reports__cards">
+                      <div class="report__card">
+                          <div class="report__avatar">
+                              <img src="./assets/images/people/3.jpg" alt="r1">
+                          </div>
+                          <div class="report__content">
+                              Спасибо большое! Дети в бурных эмоция, аниматор супер, даже взрослые участвовали, как это было
+                              все классно, энергично,
+                              здорово!
+                              Успехов вам больших!
+                          </div>
+                      </div>
+                      <div class="report__card">
+                          <div class="report__avatar">
+                              <img src="./assets/images/people/5.jpg" alt="r2">
+                          </div>
+                          <div class="report__content">
+                              Всё очень понравилось.
+                              Игры хорошие, аниматоры отличные, костюмы классные! Дети были восторге!!!
+                          </div>
+                      </div>
+                      <div class="report__card">
+                          <div class="report__avatar">
+                              <img src="./assets/images/people/6.jpg" alt="r3">
+                          </div>
+                          <div class="report__content">
+                              Уже не первый раз заказываем праздник у вас, как всегда вы огромные специалисты и мастера своего
+                              дела!
+                              Отлично всё: от приёма заказа, до финала праздника. Удачи и до новых встреч!!
+                          </div>
+                      </div>
                   </div>
-                  <div class="report__card">
-                     <div class="report__avatar">
-                        <img src="./assets/images/people/5.jpg" alt="r2">
-                     </div>
-                     <div class="report__content">
-                        Всё очень понравилось.
-                        Игры хорошие, аниматоры отличные, костюмы классные! Дети были восторге!!!
-                     </div>
-                  </div>
-                  <div class="report__card">
-                     <div class="report__avatar">
-                        <img src="./assets/images/people/6.jpg" alt="r3">
-                     </div>
-                     <div class="report__content">
-                        Уже не первый раз заказываем праздник у вас, как всегда вы огромные специалисты и мастера своего
-                        дела!
-                        Отлично всё: от приёма заказа, до финала праздника. Удачи и до новых встреч!!
-                     </div>
-                  </div>
-               </div>
-            </div>
-         </div>
-         <!-- reports -->
+              </div>
+          </div>
+          <!-- reports -->
+          <!-- footer -->
+<footer class="footer">
+    <div class="footer__wrapper">
+        <div class="footer__phone">
+            Телефон “8 (800) 111-20-20”
+        </div>
+        <nav class="nav">
+            <ul class="nav__list">
+                <li><a href="">Акция</a></li>
+                <li><a href="">Поиск</a></li>
+                <li><a href="">Управление бронированием</a></li>
+            </ul>
+        </nav>
+    </div>
+</footer>
+          <!-- footer -->
+
+
 
       </main>
    </div>
