--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
                 </div>
                 <nav class="nav">
                     <ul class="nav__list">
-                        <li><a href="">Акция</a></li>
-                        <li><a href="">Поиск</a></li>
+                        <li><a href="#locations">Акция</a></li>
+                        <li><a href="./search.html">Поиск</a></li>
                         <li><a href="">Управление бронированием</a></li>
                     </ul>
                 </nav>
@@ -151,8 +151,8 @@
                     </div>
                     <nav class="nav">
                         <ul class="nav__list">
-                            <li><a href="">Акция</a></li>
-                            <li><a href="">Поиск</a></li>
+                            <li><a href="#locations">Акция</a></li>
+                            <li><a href="./search.html">Поиск</a></li>
                             <li><a href="">Управление бронированием</a></li>
                         </ul>
                     </nav>
