--- a/search.html
+++ b/search.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Search</title>
+    <title>Праздник в каждый дом | Поиск</title>
 </head>
 
 <body>
@@ -14,16 +14,19 @@
         <!-- header -->
         <header class="header">
             <div class="header__wrapper">
-                <div class="logo">
-                    <div class="logo__wrapper">
-                        <img src="assets/images/for logo/4.png" alt="logo">
+
+                <a href="/">
+                    <div class="logo">
+                        <div class="logo__wrapper">
+                            <img src="assets/images/for logo/4.png" alt="logo">
+                        </div>
                     </div>
-                </div>
+                </a>
                 <nav class="nav">
                     <ul class="nav__list">
-                        <li><a href="#locations">Акция</a></li>
+                        <li><a href="#locations">Акции</a></li>
                         <li><a href="./search.html">Поиск</a></li>
-                        <li><a href="">Управление бронированием</a></li>
+                        <li><a href="./booking.html">Управление бронированием</a></li>
                     </ul>
                 </nav>
             </div>
@@ -52,6 +55,9 @@
                                     д.1
                                 </figcaption>
                             </figure>
+                            <div class="locations__button">
+                                <a href="./booking.html">Выбрать</a>
+                            </div>
                         </div>
                         <div class="locations__card">
                             <figure class="locations__image">
@@ -63,6 +69,9 @@
                                     <br> Пионерская долина, 5
                                 </figcaption>
                             </figure>
+                            <div class="locations__button">
+                                <a href="./booking.html">Выбрать</a>
+                            </div>
 
                         </div>
                         <div class="locations__card">
@@ -73,6 +82,9 @@
                                     праздников «Поляна сказок»
                                 </figcaption>
                             </figure>
+                            <div class="locations__button">
+                                <a href="./booking.html">Выбрать</a>
+                            </div>
 
                         </div>
                     </div>
@@ -91,9 +103,9 @@
                 </div>
                 <nav class="nav">
                     <ul class="nav__list">
-                        <li><a href="">Акция</a></li>
+                        <li><a href="">Акции</a></li>
                         <li><a href="">Поиск</a></li>
-                        <li><a href="">Управление бронированием</a></li>
+                        <li><a href="./booking.html">Управление бронированием</a></li>
                     </ul>
                 </nav>
             </div>
