--- a/booking.html
+++ b/booking.html
@@ -41,10 +41,10 @@
                     <div class="region">
                         Выберите регион:
                         <select name="" id="selector">
-                            <option value="">Москва</option>
-                            <option value="">Ленинград</option>
-                            <option value="">Сталинград</option>
-                            <option value="">Свердловск</option>
+                            <option value="Москва">Москва</option>
+                            <option value="Ленинград">Ленинград</option>
+                            <option value="Сталинград">Сталинград</option>
+                            <option value="Свердловск">Свердловск</option>
                         </select>
                     </div>
 
@@ -54,27 +54,6 @@
                     </div>
 
 
-                    <div class="sell">Итого:</div>
-                    Выберите дополнительные услуги:
-                    <div class="region">
-                        Организация дополнительного питания:
-                        <input type="checkbox" id="eat">
-                    </div>
-                    <div class="region">
-                        Услуги аниматоров:
-                        <input type="checkbox" id="anim">
-                    </div>
-                    <div class="region">
-                        Услуги ведуущего:
-                        <input type="checkbox" id="man">
-                    </div>
-                    <div class="region">
-                        Услуги детского такси:
-                        <input type="checkbox" id="taxi">
-                    </div>
-                    <textarea class="inputCom"></textarea>
-
-                    <input type="email" id="myemail" placeholder="Укажите email">
                     <div class="sellmain">
                         Итоговая стоимость:
                     </div>
