--- a/booking.html
+++ b/booking.html
@@ -57,12 +57,29 @@
                     <div class="sellmain">
                         Итоговая стоимость:
                     </div>
-                    <button id="buy">Оформить</button>
+                    <button class="buy" id="myBtn">Оформить</button>
                 </div>
 
             </form>
         </div>
         <!-- booking form -->
+
+        <!-- modal -->
+
+        <!-- Trigger/Open The Modal -->
+
+        <!-- The Modal -->
+        <div id="myModal" class="modal">
+
+            <!-- Modal content -->
+            <div class="modal-content">
+                <span class="close">&times;</span>
+                <p>Some text in the Modal..</p>
+            </div>
+
+        </div>
+        <!-- modal -->
+
 
 
         <!-- footer -->
