--- a/booking.html
+++ b/booking.html
@@ -74,7 +74,9 @@
             <!-- Modal content -->
             <div class="modal-content">
                 <span class="close">&times;</span>
-                <p>Some text in the Modal..</p>
+                <div class="mcc">
+                    Вы выбрали город: <span></span> Цена: <span></span>
+                </div>
             </div>
 
         </div>
